--- a/helpdesk/templates/helpdesk/dashboard.html
+++ b/helpdesk/templates/helpdesk/dashboard.html
@@ -35,10 +35,10 @@
 
 {% include 'helpdesk/include/unassigned.html' %}
 
-{% if user_tickets_closed_resolved %}
-{% trans "Closed & resolved Tickets you used to work on" as ticket_list_caption %}
-{% trans "utcr_page" as page_var %}
-{% include 'helpdesk/include/tickets.html' with ticket_list=user_tickets_closed_resolved ticket_list_empty_message="" page_var=page_var %}
-{% endif %}
+{#{% if user_tickets_closed_resolved %}#}
+{#{% trans "Closed & resolved Tickets you used to work on" as ticket_list_caption %}#}
+{#{% trans "utcr_page" as page_var %}#}
+{#{% include 'helpdesk/include/tickets.html' with ticket_list=user_tickets_closed_resolved ticket_list_empty_message="" page_var=page_var %}#}
+{#{% endif %}#}
 
 {% endblock %}
