--- a/helpdesk/templates/helpdesk/include/tickets.html
+++ b/helpdesk/templates/helpdesk/include/tickets.html
@@ -15,16 +15,18 @@
                     <th>{% trans "Priority" %}</th>
                     <th>{% trans "Queue" %}</th>
                     <th>{% trans "Status" %}</th>
+                     <th>{% trans "Submitter" %}</th>
                     <th>{% trans "Last Update" %}</th>
                 </tr>
             </thead>
             <tbody>
                 {% for ticket in ticket_list %}
                 <tr class="{{ ticket.get_priority_css_class }}">
-                    <td class="tickettitle"><a href="{{ ticket.get_absolute_url }}">{{ ticket.id }}. {{ ticket.title }}</a></td>
+                    <td class="tickettitle"><a href="{{ ticket.get_absolute_url }}">{{ ticket.id }}. {{ ticket.title }} - {{ ticket.description|truncatechars:40 }}</a></td>
                     <td>{{ ticket.priority }}</td>
                     <td>{{ ticket.queue }}</td>
                     <td>{{ ticket.get_status }}</td>
+                          <td>{{ ticket.submitter_email }}</td>
                     <td><span title='{{ ticket.modified|date:"DATETIME_FORMAT" }}'>{{ ticket.modified|naturaltime }}</span></td>
                 </tr>
                 {% empty %}
