--- a/helpdesk/templates/helpdesk/include/unassigned.html
+++ b/helpdesk/templates/helpdesk/include/unassigned.html
@@ -11,19 +11,22 @@
                 <thead class="thead-light">
                     <tr>
                       <th>{% trans "Ticket" %}</th>
-                      <th>{% trans "Priority" %}</th>
-                      <th>{% trans "Queue" %}</th>
+                      <th>{% trans "Pr" %}</th>
+                      <th>{% trans "Q" %}</th>
                       <th>{% trans "Created" %}</th>
+                        <th>{% trans "Submitter" %}</th>
                       <th>{% trans "Actions" %}</th>
                     </tr>
                 </thead>
                 <tbody>
                 {% for ticket in unassigned_tickets %}
                     <tr class="{{ ticket.get_priority_css_class }}">
-                        <td class="tickettitle"><a href='{{ ticket.get_absolute_url }}'>{{ ticket.id }}. {{ ticket.title }} </a></td>
+                        <td class="tickettitle"><a href='{{ ticket.get_absolute_url }}'>{{ ticket.id }}. {{ ticket.title }}<br />
+                            {{ ticket.description|truncatechars:120 }} </a></td>
                         <td>{{ ticket.priority }}</td>
                         <td>{{ ticket.queue }}</td>
                         <td><span title='{{ ticket.created|date:"DATETIME_FORMAT" }}'>{{ ticket.created|naturaltime }}</span></td>
+                                         <td>{{ ticket.submitter_email }}</td>
                         <td class="text-center">
                           <a href='{{ ticket.get_absolute_url }}?take'><button class='btn btn-primary btn-sm'><i class="fas fa-hand-paper"></i>&nbsp;{% trans "Take" %}</button></a>
                           <a href='{% url 'helpdesk:delete' ticket.id %}?next=dashboard'><button class='btn btn-danger btn-sm'><i class="fas fa-trash"></i>&nbsp;{% trans "Delete" %}</button></a>
@@ -61,7 +64,7 @@
                 <tbody>
                 {% for ticket in kbitem.unassigned_tickets %}
                     <tr class="{{ ticket.get_priority_css_class }}">
-                        <td class="tickettitle"><a href='{{ ticket.get_absolute_url }}'>{{ ticket.id }}. {{ ticket.title }} </a></td>
+                        <td class="tickettitle"><a href='{{ ticket.get_absolute_url }}'>{{ ticket.id }}. {{ ticket.title }} - {{ ticket.description|truncatechars:40 }}</a></td>
                         <td>{{ ticket.priority }}</td>
                         <td>{{ ticket.queue }}</td>
                         <td><span title='{{ ticket.created|date:"DATETIME_FORMAT" }}'>{{ ticket.created|naturaltime }}</span></td>
